Api Kelemba - second commit
